cmake_minimum_required(VERSION 3.20)

project(cpp-course)
set(CMAKE_CXX_STANDARD 20)

add_executable(data-types data-types.cpp)
add_executable(loops loops.cpp)
add_executable(arrays arrays.cpp)
add_executable(vector vector.cpp)
add_executable(functions functions.cpp)
add_executable(pointers pointers.cpp)